--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Siberia (Russia) -- Description and travel'
 - !lcc 'DK'
 - !lcc 'DS'
+- GITenberg
 title: 'Overland through Asia; Pictures of Siberian, Chinese, and Tartar
 
   Life'
